xstate state machines for components

--- a/resources/styles/_variables.scss
+++ b/resources/styles/_variables.scss
@@ -10,7 +10,7 @@ $color-green-apple: #61cc41;
 $color-green-forest: #418f2a;
 $color-green-fern: #427c30;
 
-$default-fontFamily: Roboto;
+$default-fontFamily: Roboto, Arial;
 
 $default-fontSize: 12px;
 
